# ocaml-geth

./: .gitignore  .ocamlformat  README.md  dune-project  geth.opam  mlparity.opam  ocaml-geth.opam
examples/: deploy.ml  interact.ml
examples/console/: console.ml  dune  jbuild
examples/deploy/: deploy.ml  dune  jbuild
examples/monitor/: dune  jbuild  monitor.ml
examples/solidity/: dune  erc20.ml  erc20.sol  jbuild  storage  storage.ml  storage.sol
examples/solidity/_build/: .db  .digest-db  log
examples/solidity/_build/default/: .merlin  erc20.ml.d  storage.ml  storage.ml.d
examples/solidity/_build/default/.erc20.eobjs/: erc20.cmi  erc20.cmo  erc20.cmt  erc20.cmx
examples/solidity/_build/default/.storage.eobjs/: storage.cmi  storage.cmo  storage.cmt  storage.cmx
examples/uniswap/: dune  uniswap.ml
lib/: ABI.ml  ABI.mli  asm.ml  basic.ml  basic.mli  bitstr.ml  bitstr.mli  contract.ml  contract.mli  dune  evm.ml  evm.mli  gethInit.ml  gethInit.mli  hashId.ml  host.ml  identity.ml  jbuild  json.ml  json.mli  mlparity.ml  opcodes  parity.ml  personal.ml  rpc.ml  rpc.mli  shell.ml  shell.mli  sigs.ml  sigs.mli  solidityTypes.ml  solidityTypes.mli  solidityValue.ml  solidityValue.mli  tools.ml  types.ml  types.mli  utils.ml
lib_geth/: dune  gethInit.ml  gethInit.mli  shell.mli
lib_lwt/: compile.ml  compile.mli  contract_lwt.ml  contract_lwt.mli  dune  rpc.ml  rpc.mli
lib_test/: .merlin  dune  helloworld.sol  jbuild  test.ml
