opam-version: "1.2"
maintainer: "ilias.gar@gmail.com"
authors: ["Ilias Garnier"]
homepage: "https://github.com/igarnier/TODO"
bug-reports: "https://github.com/igarnier/TODO"
dev-repo: "git+https://github.com/igarnier/TODO"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder"                {build & >= "1.0+beta8"}
  "yojson"
  "batteries"
  "netclient"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
An OCaml overlay over parity's RPC interface.
"
