opam-version: "1.2"
maintainer: "ilias.gar@gmail.com"
authors: ["Ilias Garnier"]
homepage: "https://github.com/igarnier/ocaml-geth"
bug-reports: "https://github.com/igarnier/ocaml-geth"
dev-repo: "git+https://github.com/igarnier/ocaml-geth"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder"                {build & >= "1.0+beta8"}
  "yojson"
  "batteries"
  "netclient"
  "ssh-client"
  "cryptokit"
  "zarith"
  "hex"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
An OCaml overlay over the Go-Ethereum (geth) client.
"
